# terminal-tool-builder-lib

./: .gitignore  CMakeLists.txt  README.md
include/: tool_builder.h
lib/: tool_builder.c
src/: tool_builder.c
src/ds/: queue.c  queue.h
tests/: CMakeLists.txt  main.c
tools/include/: parser.h
